objects/Scope_MtM__c.object
<CustomObject>
    <description>Use to tag a single Scope record to a single Program record</description>
    <fields>
        <fullName>Active__c</fullName>
        <description>Created for CR-20151022-9346</description>
        <formula>Scope__r.Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for CR-20151022-9346</description>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Scope MtMs</relationshipLabel>
        <relationshipName>Scope_MtMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scope_Name_Update_Latest_Date__c</fullName>
        <description>Created for CR-20151022-9346.</description>
        <label>Scope Name Update Latest Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for CR-20151022-9346</description>
        <label>Scope</label>
        <referenceTo>Scope__c</referenceTo>
        <relationshipLabel>Scope MtMs</relationshipLabel>
        <relationshipName>Scope_MtMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Scope MtM</label>
    <nameField>
        <label>Scope MtM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scope MtM</pluralLabel>
    <recordTypes>
        <fullName>Consulting_Management</fullName>
        <active>true</active>
        <description>Consulting &amp; Management</description>
        <label>Consulting &amp; Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>EAB</fullName>
        <active>true</active>
        <description>EAB</description>
        <label>EAB</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>